fix : text align issue
특정 해상도에서 프로필 내용이 왼쪽정렬이 되지 않던 현상 수정

--- a/style.css
+++ b/style.css
@@ -271,7 +271,6 @@ button:hover {
 
 .leftTextBox {
     display: inline-block;
-    text-align: center;
 }
 
 
@@ -302,6 +301,8 @@ button:hover {
 .leftTextBox ul li {
     font-size: 20px;
     font-family: nanumSquareB;
+
+    text-align: left;
 }
 
 .title {
